--- a/index.html
+++ b/index.html
@@ -64,7 +64,21 @@
     
     <script>
       // The data/time we want to countdown to
-      var countDownDate = new Date("Apr 24, 2021 00:00:00").getTime();
+      var birthday = new Date("Apr 24, 2021 00:00:00");
+      
+      var today = new Date()
+      birthday.setFullYear(today.getFullYear())
+
+      // Not birthday
+      if (today.getDate() != 24 || today.getMonth() != 3) {
+        if (birthday < today) {
+          birthday.setFullYear(today.getFullYear() + 1)
+        }
+      }
+
+      var countDownDate = birthday.getTime();
+
+      console.log(birthday);
 
       // Run myfunc every second
       var myfunc = setInterval(function () {
